project_example/test/application-ocs-api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ocs-api
  namespace: poc-es

spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld2
  template:
    metadata:
      labels:
        app: helloworld2
        version: aguia2
    spec:
      containers:
        - name: helloworld2
          #image: mberthos/kubernetes-example:0.0.3
          image: argoproj/rollouts-demo:orange
          ports:
            - containerPort: 9229
              protocol: TCP
          env:
          volumeMounts:
            #- mountPath: "/app/environments"
            #  name: ocs-billing2-secrets #envs-mounted-by-awssm
            #  readOnly: true
            - mountPath: "/app/environments"
              name: ocs2-api-secrets #envs-mounted-by-awssm
              readOnly: false
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /
              port: 9229
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 9229
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      volumes:
        #- name: ocs-billing2-secrets #envs-mounted-by-awssm
        #  secret:
        #    secretName: ocs-billing2-secrets
        - name: ocs2-api-secrets #envs-mounted-by-awssm
          secret:
            secretName: ocs2-api-secrets
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: service-helloworld2
  namespace: poc-es
  labels:
    app: helloworld2
    service: service-helloworld2
spec:
  selector:
    app: helloworld2
  ports:
    - port: 9229
      name: http
